fix flex align issue

--- a/style.scss
+++ b/style.scss
@@ -6,7 +6,7 @@ $shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, 0.5),
   flex-direction: $direction;
   gap: $gap;
   justify-content: $jcc;
-  align-content: $aic;
+  align-items: $aic;
 }
 
 $red: crimson;
